[package]
name = "bib-unbound"
version = "0.3.0"
authors = ["Ryan Avella"]
edition = "2021"

description = "Parser for the Unbound Bible format"
documentation = "https://docs.rs/bib-unbound"
readme = "README.md"
homepage = "https://github.com/ryanavella/bib-unbound-rs"
repository = "https://github.com/ryanavella/bib-unbound-rs"
license = "Unlicense OR MIT"
keywords = ["bible", "unbound", "testament", "scripture"]
categories = ["parser-implementations"]

[dependencies]
